--- a/index.html
+++ b/index.html
@@ -8,18 +8,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Urdu font for Arabic script rendering -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu:wght@400;600&display=swap" rel="stylesheet">
-    <title>Mindspire Physiotherapy</title>
-    <meta name="description" content="Complete physiotherapy management system" />
-    <meta name="author" content="Lovable" />
+    
+    <!-- Favicon and Icons -->
+    <link rel="icon" type="image/svg+xml" href="/icon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/favicon-16x16.svg">
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/favicon-32x32.svg">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.svg">
+    <link rel="manifest" href="/manifest.json">
+    
+    <title>Physio Clinic - Healing Through Care</title>
+    <meta name="description" content="Professional physiotherapy management system for comprehensive patient care and clinic administration" />
+    <meta name="author" content="Physio Clinic" />
 
-    <meta property="og:title" content="mindspire-flow-clinic" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Physio Clinic - Healing Through Care" />
+    <meta property="og:description" content="Professional physiotherapy management system for comprehensive patient care and clinic administration" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/icon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Physio Clinic - Healing Through Care" />
+    <meta name="twitter:description" content="Professional physiotherapy management system for comprehensive patient care and clinic administration" />
+    <meta name="twitter:image" content="/icon.svg" />
   </head>
 
   <body>
