--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.svg">
     <link rel="manifest" href="/manifest.json">
     
+    <!-- PWA Meta Tags -->
+    <meta name="theme-color" content="#3B82F6">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Physio Clinic">
+    <meta name="mobile-web-app-capable" content="yes">
+    
     <title>Physio Clinic - Healing Through Care</title>
     <meta name="description" content="Professional physiotherapy management system for comprehensive patient care and clinic administration" />
     <meta name="author" content="Physio Clinic" />
