--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu:wght@400;600&display=swap" rel="stylesheet">
     
     <!-- Favicon and Icons -->
-    <link rel="icon" type="image/svg+xml" href="/icon.svg">
-    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/favicon-16x16.svg">
-    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/favicon-32x32.svg">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.svg">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.svg">
+    <link rel="icon" type="image/png" sizes="48x48" href="/icon-48x48.png">
+    <link rel="apple-touch-icon" href="/logo.jpg">
     <link rel="manifest" href="/manifest.json">
     
     <!-- PWA Meta Tags -->
@@ -32,12 +33,12 @@
     <meta property="og:title" content="Physio Clinic - Healing Through Care" />
     <meta property="og:description" content="Professional physiotherapy management system for comprehensive patient care and clinic administration" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/icon.svg" />
+    <meta property="og:image" content="/logo.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Physio Clinic - Healing Through Care" />
     <meta name="twitter:description" content="Professional physiotherapy management system for comprehensive patient care and clinic administration" />
-    <meta name="twitter:image" content="/icon.svg" />
+    <meta name="twitter:image" content="/logo.jpg" />
   </head>
 
   <body>
