--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>DevOra Physiotherapy</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/12.1.0/firebase-app-compat.js"></script>
@@ -23,67 +23,148 @@
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        margin: 0;
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: radial-gradient(circle at top, #e0f4ff 0, #f5fbff 40%, #ecf3ff 100%);
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      }
+      .splash {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        padding: 2.5rem 2rem;
+        border-radius: 1.25rem;
+        background: rgba(255, 255, 255, 0.9);
+        box-shadow: 0 18px 45px rgba(15, 23, 42, 0.12);
+        backdrop-filter: blur(18px);
+        text-align: center;
+        max-width: 360px;
+        width: 90%;
+        animation: floatIn 650ms ease-out;
+      }
+      .splash-logo-wrap {
+        width: 96px;
+        height: 96px;
+        border-radius: 999px;
+        background: linear-gradient(135deg, #0ea5e9, #22c55e);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 10px 30px rgba(14, 165, 233, 0.35);
+        animation: pulseRing 2.2s ease-in-out infinite;
+      }
+      .splash-logo {
+        width: 72px;
+        height: 72px;
+        border-radius: 18px;
+        object-fit: contain;
+        background: white;
+      }
+      .splash-title {
+        font-size: 1.25rem;
+        font-weight: 700;
+        color: #020617;
+        letter-spacing: 0.02em;
+      }
+      .splash-subtitle {
+        font-size: 0.9rem;
+        color: #6b7280;
+        max-width: 18rem;
+      }
+      .splash-indicator {
+        margin-top: 0.5rem;
+        display: flex;
+        align-items: center;
+        gap: 0.4rem;
+        font-size: 0.8rem;
+        color: #64748b;
+      }
+      .dot {
+        width: 6px;
+        height: 6px;
+        border-radius: 999px;
+        background: #0ea5e9;
+        animation: bounce 1s infinite alternate;
+      }
+      .dot:nth-child(2) {
+        animation-delay: 0.18s;
+      }
+      .dot:nth-child(3) {
+        animation-delay: 0.36s;
+      }
+
+      @keyframes floatIn {
+        from {
+          opacity: 0;
+          transform: translateY(18px) scale(0.97);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0) scale(1);
+        }
+      }
+
+      @keyframes pulseRing {
+        0% {
+          box-shadow: 0 0 0 0 rgba(14, 165, 233, 0.45);
+        }
+        70% {
+          box-shadow: 0 0 0 18px rgba(14, 165, 233, 0);
+        }
+        100% {
+          box-shadow: 0 0 0 0 rgba(14, 165, 233, 0);
+        }
+      }
+
+      @keyframes bounce {
+        to {
+          transform: translateY(-4px);
+          opacity: 0.6;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .splash {
+          padding: 2rem 1.5rem;
+          border-radius: 1rem;
+        }
+        .splash-title {
+          font-size: 1.1rem;
+        }
+        .splash-subtitle {
+          font-size: 0.85rem;
+        }
       }
     </style>
   </head>
   <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
+    <main class="splash" aria-label="DevOra loading">
+      <div class="splash-logo-wrap">
+        <img
+          src="/devora-removebg-preview.png"
+          alt="DevOra logo"
+          class="splash-logo"
+        />
+      </div>
+      <h1 class="splash-title">DevOra Physiotherapy</h1>
+      <p class="splash-subtitle">
+        Smart clinic management for modern physiotherapists.
+      </p>
+      <div class="splash-indicator">
+        <span>Loading workspace</span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+    </main>
   </body>
 </html>
